# robotics_v1_entry

./: .gitignore  CMakeLists.txt  README.md
cpp/: CMakeLists.txt  Solution.cpp  Solution.h  main.cpp
cpp/utils/: CommonDefines.h  EyePatterns.h  FileParser.h  FunctionTracer.h  Image.cpp  Image.h  SolutionEvaluator.h
include/: Solution.h  Solution.hpp
include/solution/: Solution.hpp
include/utils/: CommonDefines.hpp  EyePatterns.hpp  FileParser.h  FileParser.hpp  FunctionTracer.h  FunctionTracer.hpp  Image.h  Image.hpp  SolutionEvaluator.h  SolutionEvaluator.hpp
python/: main.py  solution.py
python/utils/: eye_pattern.py  file_parser.py  function_tracer.py  image.py  pixel.py  resolution.py
src/: main.cpp
src/solution/: Solution.cpp
src/utils/: Image.cpp
